--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "type": "module",
   "dependencies": {
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "dbus-next": "^0.10.2",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "socket.io": "^4.8.1",
+    "ws": "^8.18.1"
   }
 }
