--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "dbus-next": "^0.10.2",
     "express": "^4.21.2",
+    "multicast-dns": "^7.2.5",
     "socket.io": "^4.8.1",
     "ws": "^8.18.1"
   }
